repaired alignment and improved view

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,3 +7,4 @@ $color-black: #000000;
 $color-blue: #0363ad;
 $gray7 : #f0f0f0;
 $disabled-text-grey: #aaaaaa;
+$text-white: #ffffff;
